prevent load jumping

--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -18,7 +18,11 @@
 }
  
 .hero__text {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
     max-width: 840px;
+    min-height: 330px;
     @media screen and (min-width: 600px) {
         padding-right: 60px;
         width: 70%;
